# dodgem-py

./: README.md  pyproject.toml
docs/: _config.yml  api.md  cli.md  configuration.md  database.md  evalmap.md  faq.md  gui.md  index.md  installation.md  level.md  quickstart.md  rule.md
dodgem/: __init__.py  __main__.py  dodgem.py  gui.py
